--- a/missions/story/prologue.mdx
+++ b/missions/story/prologue.mdx
@@ -252,133 +252,133 @@ icon: "flag-checkered"
 
 ### 💥 Blowing up the Garage Door
 
-> **Michael** and **Trevor** take cover as Brad sets a charge on the door.
+> <span className="michael">Michael</span> and <span className="trevor">Trevor</span> take cover as Brad sets a charge on the door.
 
-**Brad:** I'm setting the charges. They're on a timer, so brace yourselves\!
+<span className="brad">Brad:</span> I'm setting the charges. They're on a timer, so brace yourselves\!
 
-> As **Brad** sets the charge, he goes into cover. The charge blows up, opening the door. Sirens are heard outside.
+> As <span className="brad">Brad</span> sets the charge, he goes into cover. The charge blows up, opening the door. Sirens are heard outside.
 
-**Brad:** Just fucking perfect\!
+<span className="brad">Brad:</span> Just fucking perfect\!
 
-**Michael:** Oh, fuck. You hear that? Sirens.
+<span className="michael">Michael:</span> Oh, fuck. You hear that? Sirens.
 
-**Brad:** Fuck the cops. T, hit the shutter switch.
+<span className="brad">Brad:</span> Fuck the cops. T, hit the shutter switch.
 
-**Trevor:** What's this? Local resistance?
+<span className="trevor">Trevor:</span> What's this? Local resistance?
 
 <Accordion title="Alternative Dialogue - Trevor standing still">
-  **Brad** complains if **Trevor** does not proceed to the switch immediately. **Michael** informs the crew. The order of the dialogue is random.
+  <span className="brad">Brad</span> complains if <span className="trevor">Trevor</span> does not proceed to the switch immediately. <span className="michael">Michael</span> informs the crew. The order of the dialogue is random.
 
-  **Brad:** Heads down. We got to go\!\
-  **Michael:** Get out of here\!\
-  **Alternative:** They're out here. Get ready.
+  <span className="brad">Brad:</span> Heads down. We got to go\!\
+  <span className="michael">Michael:</span> Get out of here\!\
+  <span className="alternative">Alternative:</span> They're out here. Get ready.
 </Accordion>
 
 ### 🚨 Engaging with Police
 
-> **Trevor** hits the switch of the shutter, which opens gradually. North Yankton State Patrol forces are seen outside.
+> <span className="trevor">Trevor</span> hits the switch of the shutter, which opens gradually. North Yankton State Patrol forces are seen outside.
 
-**Michael:** It ain't supposed to go down like this.
+<span className="michael">Michael:</span> It ain't supposed to go down like this.
 
-**Trevor:** It never is. Come on. Go.
+<span className="trevor">Trevor:</span> It never is. Come on. Go.
 
 > The crew engages in a gunfight.
 
 <Accordion title="Alternative Dialogue - Trevor staying inside">
-  **Brad** and **Michael** call out **Trevor** if **Trevor** does not leave the building immediately. The order of the dialogue is random.
+  <span className="brad">Brad</span> and <span className="michael">Michael</span> call out <span className="trevor">Trevor</span> if <span className="trevor">Trevor</span> does not leave the building immediately. The order of the dialogue is random.
 
-  **Brad:** Move\! Move\! Move\!\
-  **Alternative:** We keep going forward\!\
-  **Michael:** Come on, guys.\
-  **Alternative:** Move\! We're coming through\!\
-  **Alternative:** What the fuck is this\!?
+  <span className="brad">Brad:</span> Move\! Move\! Move\!\
+  <span className="alternative">Alternative:</span> We keep going forward\!\
+  <span className="michael">Michael:</span> Come on, guys.\
+  <span className="alternative">Alternative:</span> Move\! We're coming through\!\
+  <span className="alternative">Alternative:</span> What the fuck is this\!?
 </Accordion>
 
 ### 🔫 Gunfight Dialogue - Random Order
 
 <AccordionGroup>
   <Accordion title="Brad">
-    **Brad:** Bring 'em.\
-    **Alternative:** Dumb fucking cops\!\
-    **Alternative:** Fuck these guys\!\
-    **Alternative:** Get in their faces.\
-    **Alternative:** I ain't laying down for them.\
-    **Alternative:** Move\! Move\! Move\!\
-    **Alternative:** Move\! We're coming through\!\
-    **Alternative:** Press forward\!\
-    **Alternative:** We bring it to 'em.\
-    **Alternative:** We keep going forward\!
+    <span className="brad">Brad:</span> Bring 'em.\
+    <span className="alternative">Alternative:</span> Dumb fucking cops\!\
+    <span className="alternative">Alternative:</span> Fuck these guys\!\
+    <span className="alternative">Alternative:</span> Get in their faces.\
+    <span className="alternative">Alternative:</span> I ain't laying down for them.\
+    <span className="alternative">Alternative:</span> Move\! Move\! Move\!\
+    <span className="alternative">Alternative:</span> Move\! We're coming through\!\
+    <span className="alternative">Alternative:</span> Press forward\!\
+    <span className="alternative">Alternative:</span> We bring it to 'em.\
+    <span className="alternative">Alternative:</span> We keep going forward\!
   </Accordion>
   <Accordion title="Michael">
-    **Michael:** Don't be an idiot\!\
-    **Alternative:** Drop it, prick\!\
-    **Alternative:** Get down\!\
-    **Alternative:** What the fuck is this\!?\
-    **Alternative:** Who snitched\!?
+    <span className="michael">Michael:</span> Don't be an idiot\!\
+    <span className="alternative">Alternative:</span> Drop it, prick\!\
+    <span className="alternative">Alternative:</span> Get down\!\
+    <span className="alternative">Alternative:</span> What the fuck is this\!?\
+    <span className="alternative">Alternative:</span> Who snitched\!?
   </Accordion>
   <Accordion title="Trevor">
-    **Trevor:** Back the fuck down\!\
-    **Alternative:** Blame the pricks who called you out here\!\
-    **Alternative:** Don't be as dumb as you look.\
-    **Alternative:** Get out the way\!\
-    **Alternative:** Get out of the way or suffer the consequence.\
-    **Alternative:** They answered the wrong call\!\
-    **Alternative:** Wrong profession\!\
-    **Alternative:** You shouldn't have been a cop.
+    <span className="trevor">Trevor:</span> Back the fuck down\!\
+    <span className="alternative">Alternative:</span> Blame the pricks who called you out here\!\
+    <span className="alternative">Alternative:</span> Don't be as dumb as you look.\
+    <span className="alternative">Alternative:</span> Get out the way\!\
+    <span className="alternative">Alternative:</span> Get out of the way or suffer the consequence.\
+    <span className="alternative">Alternative:</span> They answered the wrong call\!\
+    <span className="alternative">Alternative:</span> Wrong profession\!\
+    <span className="alternative">Alternative:</span> You shouldn't have been a cop.
   </Accordion>
 </AccordionGroup>
 
 ### 🚗 Crew Walking towards Getaway Car
 
-> **Brad** and **Trevor** get their masks off. The crew fights the police forces on their way toward their escape vehicle.
+> <span className="brad">Brad</span> and <span className="trevor">Trevor</span> get their masks off. The crew fights the police forces on their way toward their escape vehicle.
 
-**Michael:** Let's get out of here\!\
-**Alternative:** We got a window. Let's go\!
+<span className="michael">Michael:</span> Let's get out of here\!\
+<span className="alternative">Alternative:</span> We got a window. Let's go\!
 
 > The crew carries on, shooting their way out to the vehicle. The crew continues shouting at each other and cops, with random dialogues from the gunfight dialogue segment.
 > The crew gets near the escape vehicle.
 
-**Trevor:** Can't be many more cops in this town.
+<span className="trevor">Trevor:</span> Can't be many more cops in this town.
 
-**Michael:** This is fucked, man. The thing is blown.
+<span className="michael">Michael:</span> This is fucked, man. The thing is blown.
 
-**Trevor:** I got my share. It's still wide open\!
+<span className="trevor">Trevor:</span> I got my share. It's still wide open\!
 
-**Brad:** Car's up here\! Let's go\!
+<span className="brad">Brad:</span> Car's up here\! Let's go\!
 
-**Trevor:** Move\! Come on\!
+<span className="trevor">Trevor:</span> Move\! Come on\!
 
-**Michael:** Kid mighta bailed. This wasn't in the job description.\\
+<span className="michael">Michael:</span> Kid mighta bailed. This wasn't in the job description.\\
 
-**Trevor:** He better be there\!
+<span className="trevor">Trevor:</span> He better be there\!
 
 <AccordionGroup>
   <Accordion title="Alternative Dialogue - Crew moving slowly, Michael">
-    **Michael** calls the crew out if they move slowly, and the shooting prolongs.
+    <span className="michael">Michael</span> calls the crew out if they move slowly, and the shooting prolongs.
 
-    **Michael:** Come on, get to the driver\!\
-    **Alternative:** Let's get out of here\!\
-    **Alternative:** Let's go\! Get to the car\!\
-    **Alternative:** Let's move\! Come on\!
+    <span className="michael">Michael:</span> Come on, get to the driver\!\
+    <span className="alternative">Alternative:</span> Let's get out of here\!\
+    <span className="alternative">Alternative:</span> Let's go\! Get to the car\!\
+    <span className="alternative">Alternative:</span> Let's move\! Come on\!
   </Accordion>
   <Accordion title="Alternative Dialogue - Crew moving slowly, Brad">
-    **Brad** gets uneasy if the crew moves slowly and the shooting prolongs.
+    <span className="brad">Brad</span> gets uneasy if the crew moves slowly and the shooting prolongs.
 
-    **Brad:** Every man for himself.\
-    **Alternative:** Let's go\! Let's go\!\
-    **Alternative:** Let's move it.
+    <span className="brad">Brad:</span> Every man for himself.\
+    <span className="alternative">Alternative:</span> Let's go\! Let's go\!\
+    <span className="alternative">Alternative:</span> Let's move it.
   </Accordion>
   <Accordion title="Alternative Dialogue - Michael not entering car">
-    **Brad** complains if **Michael** does not enter the car, whereas the rest of the crew gets into the car.
+    <span className="brad">Brad</span> complains if <span className="michael">Michael:</span> does not enter the car, whereas the rest of the crew gets into the car.
 
-    **Brad:** Get in here.\
-    **Alternative:** Get your ass in here.
+    <span className="brad">Brad:</span> Get in here.\
+    <span className="alternative">Alternative:</span> Get your ass in here.
   </Accordion>
   <Accordion title="Alternative Dialogue - Crew moving swiftly">
     Ironically, the driver will complain if the crew arrives at the car early.
 
     **Driver:** What took ya so long?\
-    **Trevor:** Shut the fuck up and drive.
+    <span className="trevor">Trevor:</span> Shut the fuck up and drive.
   </Accordion>
 </AccordionGroup>
 
@@ -386,149 +386,149 @@ icon: "flag-checkered"
 
 > After killing the last officers, the crew gets in the car, where their getaway driver is waiting. The car drives away.
 
-**Brad:** Did you see that shit? I fuckin' put that bitch's face against the glass. Did you see that?
+<span className="brad">Brad:</span> Did you see that shit? I fuckin' put that bitch's face against the glass. Did you see that?
 
-**Michael:** Yeah, you're a real stallion.
+<span className="michael">Michael:</span> Yeah, you're a real stallion.
 
-**Trevor:** Bahbahbahbahbahbahbahbahbah\!
+<span className="trevor">Trevor:</span> Bahbahbahbahbahbahbahbahbah\!
 
 > A police car starts pursuing the vehicle.
 
 **Driver:** Aww, fuck\! How'd that happen?
 
-**Brad:** Go\! Go\! Go\! Go\!
+<span className="brad">Brad:</span> Go\! Go\! Go\! Go\!
 
-**Michael:** Fuck\!
+<span className="michael">Michael:</span> Fuck\!
 
-> **Trevor** breaks the window with his rifle and shoots at the police car.
+> <span className="trevor">Trevor</span> breaks the window with his rifle and shoots at the police car.
 
 **Driver:** Jeez, I think they're gonna...
 
 > The officer sitting in the passenger seat shoots the getaway driver in the head.
 
-**Michael:** Aw, fuck\! Local yokel's bought it\!
+<span className="michael">Michael:</span> Aw, fuck\! Local yokel's bought it\!
 
-> **Michael** tosses the driver's body out of the car and takes the wheel.
+> <span className="michael">Michael</span> tosses the driver's body out of the car and takes the wheel.
 
-**Brad:** That guy's a dick...
+<span className="brad">Brad:</span> That guy's a dick...
 
-**Michael:** [to the cops] Fuck you too.
+<span className="michael">Michael:</span> [to the cops] Fuck you too.
 
-> **Michael** hits the police car. The police car goes out of control and crashes into a tree.
+> <span className="michael">Michael</span> hits the police car. The police car goes out of control and crashes into a tree.
 
-**Brad:** Fuck you\!
+<span className="brad">Brad:</span> Fuck you\!
 
 **Crew:** Wooo\!
 
-**Trevor:** Come on\! Let's get to the chopper\! We move quick, we can beat the train.
+<span className="trevor">Trevor:</span> Come on\! Let's get to the chopper\! We move quick, we can beat the train.
 
-**Michael:** We're getting there\!
+<span className="michael">Michael:</span> We're getting there\!
 
-**Brad:** Man, I'll believe in this bird when I get eyes on it.
+<span className="brad">Brad:</span> Man, I'll believe in this bird when I get eyes on it.
 
 <Accordion title="Alternative Dialogue - Michael driving slowly">
-  If **Michael** drives slowly, an alternative dialogue will occur. **Brad** gets uneasy. **Michael** tries to calm him down.
+  If <span className="michael">Michael</span> drives slowly, an alternative dialogue will occur. <span className="brad">Brad</span> gets uneasy. **Michael** tries to calm him down.
 
-  **Trevor:** Mike.
-  **Michael:** I say there's a chopper, there's a chopper. We stick to the plan, we're home free.
-  **Brad:** Alright\! Yeah\! Fuck 'em, man\! Fuck 'em\!
-  **Trevor:** Whoo. Hahahaha.
-  **Brad:** Man, I thought this score was supposed to be an easy take? It's all gone              crazy.
-  **Michael:** Yeah. I hear you. We gotta follow the plan - everything'll work out.
-  **Brad:** Pair of neurotic idiots.
+  <span className="trevor">Trevor:</span> Mike.
+  <span className="michael">Michael:</span> I say there's a chopper, there's a chopper. We stick to the plan, we're home free.
+  <span className="brad">Brad:</span> Alright\! Yeah\! Fuck 'em, man\! Fuck 'em\!
+  <span className="trevor">Trevor:</span> Whoo. Hahahaha.
+  <span className="brad">Brad:</span> Man, I thought this score was supposed to be an easy take? It's all gone crazy.
+  <span className="michael">Michael:</span> Yeah. I hear you. We gotta follow the plan - everything'll work out.
+  <span className="brad">Brad:</span> Pair of neurotic idiots.
 </Accordion>
 
 ### 💥 Crash into the Train and Aftermath
 
 > Two police cars are seen driving in the opposite direction, passing by the crew.
 
-**Brad:** Cops. Coming our way.
+<span className="brad">Brad:</span> Cops. Coming our way.
 
-**Trevor:** Be cool... They ain't made this car yet.
+<span className="trevor">Trevor:</span> Be cool... They ain't made this car yet.
 
 > A police roadblock is seen, blocking the way and forcing the crew to go right.
 
-**Brad:** Shit\! Shit\! Shit\! Road block\!
+<span className="brad">Brad:</span> Shit\! Shit\! Shit\! Road block\!
 
-**Trevor:** Go right\! Beat the train, man\!
+<span className="trevor">Trevor:</span> Go right\! Beat the train, man\!
 
-**Michael:** I.. I got it.
+<span className="michael">Michael:</span> I.. I got it.
 
 > As the car crossed the railroad, the train hit the rear of the vehicle. The car spins out of control and crashes into a tree.
 
-**Trevor:** Arrgghh\! Arrgghh\! Jesus\!
+<span className="trevor">Trevor:</span> Arrgghh\! Arrgghh\! Jesus\!
 
-**Michael:** You guys alright?
+<span className="michael">Michael:</span> You guys alright?
 
 > The car is broken, and the crew is forced to continue on foot.
 
-**Trevor:** Fuck\! Come on\! Ditch the car, alright? We can go this way to the chopper.
+<span className="trevor">Trevor:</span> Fuck\! Come on\! Ditch the car, alright? We can go this way to the chopper.
 
-**Michael:** No, hey\! Stick to the plan.
+<span className="michael">Michael:</span> No, hey\! Stick to the plan.
 
-**Trevor:** What?
+<span className="trevor">Trevor:</span> What?
 
-**Michael:** Stick to the fucking plan\! Come on.
+<span className="michael">Michael:</span> Stick to the fucking plan\! Come on.
 
 > The crew approaches the chopper's supposed landing point.
 
-**Brad:** Where the fuck's the chopper? Fuck me, fuck, fuck\!
+<span className="brad">Brad:</span> Where the fuck's the chopper? Fuck me, fuck, fuck\!
 
 > A sniper is seen cocking his rifle hidden behind a shack.
 
-**Brad:** I'm gonna check around back.
+<span className="brad">Brad:</span> I'm gonna check around back.
 
-> The sniper hits **Brad**, who falls to the ground. **Trevor** gets to cover.
+> The sniper hits <span className="brad">Brad</span>, who falls to the ground. <span className="trevor">Trevor:</span> gets to cover.
 
-**Trevor:** Run\! It's the fucking Feds\! Someone must have fucking talked\!
+<span className="trevor">Trevor:</span> Run\! It's the fucking Feds\! Someone must have fucking talked\!
 
-> **Michael** walks towards the wounded **Brad** and examines his wound.
+> <span className="michael">Michael</span> walks towards the wounded <span className="brad">Brad</span> and examines his wound.
 
-**Michael:** Alright. Brad's gonna be fine, but we gotta get the fuck out of here.
+<span className="michael">Michael:</span> Alright. Brad's gonna be fine, but we gotta get the fuck out of here.
 
-> The sniper hits **Michael**, who falls to the ground as well. The sniper runs away in the background.
+> The sniper hits <span className="michael">Michael</span>, who falls to the ground as well. The sniper runs away in the background.
 
-**Michael:** Aw, fuck\! I'm hit\! Ah, Jesus. T, you gotta get out of here.
+<span className="michael">Michael:</span> Aw, fuck\! I'm hit\! Ah, Jesus. T, you gotta get out of here.
 
-**Trevor:** Ain't gonna leave you Mikey\!
+<span className="trevor">Trevor:</span> Ain't gonna leave you Mikey\!
 
-**Michael:** Go\! God, I'm not gonna make it. Fucking gonna bleed out. Aw, go, go...
+<span className="michael">Michael:</span> Go\! God, I'm not gonna make it. Fucking gonna bleed out. Aw, go, go...
 
-> Police cars arrive on the scene. **Trevor** holds his position for a while and shouts at cops in despair.
+> Police cars arrive on the scene. <span className="trevor">Trevor</span> holds his position for a while and shouts at cops in despair.
 
-**Trevor:** Noooo\!
+<span className="trevor">Trevor:</span> Noooo\!
 
 <Accordion title="Gunfight Dialogue - random order, Trevor">
   As **Trevor** engages in a gunfight with the police, he also yells at them in despair. The order of the dialogue is random.
 
-  **Trevor:** Come on\! Come on\!
-  **Alternative:** Die, you cocksuckers\!
-  **Alternative:** Fucking die, all of you\!
-  **Alternative:** Fuck you\! Fuck you\! Fuck you\! Fuck you\!
-  **Alternative:** I'm standing here\! Finish me\!
-  **Alternative:** Kill me, you pricks\!
-  **Alternative:** Motherfuckers\!
+  <span className="trevor">Trevor:</span>Come on\! Come on\!
+  <span className="alternative">Alternative:</span> Die, you cocksuckers\!
+  <span className="alternative">Alternative:</span> Fucking die, all of you\!
+  <span className="alternative">Alternative:</span> Fuck you\! Fuck you\! Fuck you\! Fuck you\!
+  <span className="alternative">Alternative:</span> I'm standing here\! Finish me\!
+  <span className="alternative">Alternative:</span> Kill me, you pricks\!
+  <span className="alternative">Alternative:</span> Motherfuckers\!
 </Accordion>
 
 ### ⚰️ Trevor's Escape, Michael's Funeral
 
-> As more cop cars arrive at the scene, **Trevor** is heavily outnumbered. He escapes. She approaches a woman passing by.
+> As more cop cars arrive at the scene, <span className="trevor">Trevor</span> is heavily outnumbered. He escapes. She approaches a woman passing by.
 
-**Trevor:** Hey\! You\! You, hey\!
+<span className="trevor">Trevor:</span> Hey\! You\! You, hey\!
 
 **Woman:** Oh, oh, oh God\!
 
-> The woman tries to escape but falls into the ground while running. **Trevor** catches her and holds her hostage while three officers arrive. **Trevor** confuses the woman as the pilot.
+> The woman tries to escape but falls into the ground while running. <span className="trevor">Trevor</span> catches her and holds her hostage while three officers arrive. <span className="trevor">Trevor</span> confuses the woman as the pilot.
 
 **Woman:** Oh God. Don't shoot\!
 
-**Trevor:** Where's the chopper?
+<span className="trevor">Trevor:</span> Where's the chopper?
 
 **Woman:** Help\! Help, please\! I don't know what you're talking about\!
 
-**Trevor:** [to the cops] Fucking stay back\! You come near me, she's fuckin' dead\! Stay back\!
+<span className="trevor">Trevor:</span> [to the cops] Fucking stay back\! You come near me, she's fuckin' dead\! Stay back\!
 
-> **Trevor** releases his hostage and runs away. The woman runs towards the officers.
+> <span className="trevor">Trevor</span> releases his hostage and runs away. The woman runs towards the officers.
 
 **Woman:** Oh, God, help me\! Help me\! Oh\!
 
@@ -542,8 +542,8 @@ icon: "flag-checkered"
 
 **Woman at the funeral:** [sobbing] Michael...
 
-> **Dave Norton** is seen. Credits start appearing on the screen. **Michael** is seen smoking close to the graveyard.
+> <span className="davenorton">Dave Norton</span> is seen. Credits start appearing on the screen. <span className="michael">Michael</span> is seen smoking close to the graveyard.
 
-**Priest:** We are born of sin, and we die in sin... and in this, Michael... was like anybody else. Father... we do not know your infinite mysteries. But we know... that you will show mercy to our friend.
+**Priest:** We are born of sin, and we die in sin... and in this, **Michael...** was like anybody else. Father... we do not know your infinite mysteries. But we know... that you will show mercy to our friend.
 
-> **Michael** tosses his cigarette and walks away. Grand Theft Auto V's wordmark appears on-screen.
+> <span className="michael">Michael</span> tosses his cigarette and walks away. Grand Theft Auto V's wordmark appears on-screen.
